[gd_scene load_steps=5 format=3 uid="uid://br20slaopdwra"]

[ext_resource type="PackedScene" uid="uid://gpb6tnd4ljl7" path="res://phys_ball.tscn" id="1_3p3t6"]
[ext_resource type="Script" path="res://phys_demo.gd" id="1_4v6jw"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wpogy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_db2ux"]
size = Vector2(1248, 91)

[node name="phys_demo" type="Node2D"]
script = ExtResource("1_4v6jw")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(565, 626)
scale = Vector2(1252, 91.5)
texture = SubResource("PlaceholderTexture2D_wpogy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(566, 626.5)
shape = SubResource("RectangleShape2D_db2ux")

[node name="phys_ball" parent="." instance=ExtResource("1_3p3t6")]
position = Vector2(601, 319)

[node name="Panel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 12.0
offset_right = 295.0
offset_bottom = 108.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 67.0
offset_bottom = 35.0
text = "Gravity"

[node name="slidGrav" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 75.0
offset_top = 13.0
offset_right = 274.0
offset_bottom = 29.0

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 77.0
offset_top = 43.0
offset_right = 202.0
offset_bottom = 80.0
text = "Apply Force"

[connection signal="value_changed" from="Panel/slidGrav" to="." method="_on_slid_grav_value_changed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
